--- a/consult-front/src/main/resources/static/index.html
+++ b/consult-front/src/main/resources/static/index.html
@@ -29,67 +29,19 @@
 <div class="fixed-top" style="background: rgba(255,255,255,1);">
     <div class="container">
         <div class="row">
-            <div class="col-xs-0 col-sm-0 col-md-1 col-lg-1">
+            <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
                 <div class="logo" style="height: 100%;">
                     <a href="gateway-index.html">
                         <img src="./assets/image/logo.png" alt="" style="height:100%;">
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11">
+            <div class="col-xs-12 col-sm-11 col-md-11 col-lg-11">
                 <nav>
                     <ul>
-                        <li><a href="/gateway-index.html" style="margin-right: 30px;">首页</a></li>
-                        <li><a href="./homePage/chanpinfuwu.html" style="margin-right: 30px;">产品服务</a></li>
-                        <li><a href="./homePage/zichanshiji.html" style="margin-right: 30px;">资产市集</a></li>
-                        <li><a href="#" style="margin-right: 30px;">场景应用</a>
-                            <ul style="margin-right: 15px;width:600px;line-height:40px;">
-                                <li>
-                                    输电线路识别
-                                    <div class="row">
-                                        <div class="col-md-4"><a href="./homePage/yy1.html" style="margin-right: 15px;"><h10>细小金具缺陷识别</h10></a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy2.html" style="margin-right: 15px;">绝缘子缺陷识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy3.html" style="margin-right: 15px;"><h10>均压环缺陷识别</h10></a></div><br>
-                                        <div class="col-md-4"><a href="./homePage/yy10.html" style="margin-right: 15px;">防震锤缺陷识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy11.html" style="margin-right: 15px;">异物识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy12.html" style="margin-right: 15px;">通道异常识别</a></div><br>
-                                        <div class="col-md-4"><a href="./homePage/yy13.html" style="margin-right: 15px;">附属设施缺陷识别</a></div>
-                                    </div>
-                                </li>
-                                <li>
-                                    现场作业安全管控
-                                    <div class="row">
-                                        <div class="col-md-4"><a href="./homePage/yy4.html" style="margin-right: 15px;"><h10>安全帽识别</h10></a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy5.html" style="margin-right: 15px;">警示牌识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy6.html" style="margin-right: 15px;">作业无人看护</a></div><br>
-                                        <div class="col-md-4"><a href="./homePage/yy14.html" style="margin-right: 15px;">未带安全带</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy15.html" style="margin-right: 15px;">作业现场抽烟</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy16.html" style="margin-right: 15px;">作业现场规范着装</a></div><br>
-                                    </div>
-                                </li>
-                                <li>
-                                    变电站识别
-                                    <div class="row">
-                                        <div class="col-md-4"><a href="./homePage/yy7.html" style="margin-right: 15px;">硅胶变色识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy8.html" style="margin-right: 15px;">油封破损识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy9.html" style="margin-right: 15px;">仪表状态识别</a></div><br>
-                                        <div class="col-md-4"><a href="./homePage/yy17.html" style="margin-right: 15px;">挂空悬浮物识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy18.html" style="margin-right: 15px;">鸟巢识别</a></div>
-                                        <div class="col-md-4"><a href="./homePage/yy19.html" style="margin-right: 15px;">表盘模糊</a></div><br>
-                                        <div class="col-md-4"><a href="./homePage/yy20.html" style="margin-right: 15px;">表盘破损</a></div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="#" style="margin-right: 30px;">解决方案</a>
-                            <ul style="margin-right: 15px;width:180px;">
-                                <li><a href="./homePage/jjfa3.html" style="margin-right: 15px;">输电线路巡检</a></li>
-                                <li><a href="./homePage/jjfa2.html" style="margin-right: 15px;">变电站智能监控</a></li>
-                                <li><a href="./homePage/jjfa1.html" style="margin-right: 15px;">安全生产风险管控</a></li>
-                                <li><a href="./homePage/jjfa4.html" style="margin-right: 15px;">智慧工地</a></li>
-                                <li><a href="./homePage/jjfa5.html" style="margin-right: 15px;">舆情监测</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="/gateway-index.html" style="margin-right: 30px;">求职咨询</a></li>
+                        <li><a href="/gateway-index.html" style="margin-right: 30px;">考研咨询</a>
+
                     </ul>
                 </nav>
                 <div class="mobile-menu">
@@ -97,9 +49,27 @@
                     <i class="ti-close"></i>
                 </div>
             </div>
+
         </div>
-        <div class="layui-nav-item layui-layout-right loginIn"><a href="javascript:;">控制台</a></div>
+
+        <div class="layui-nav-item layui-layout-right loginIn" style="margin-right: 30px;"><a href="javascript:;">成为专家</a></div>
+
+
+        <nav>
+            <ul>
+                <li><a href="#" style="margin-right: 30px;">关注公众号</a>
+                    <ul style="margin-right: 15px;width:180px;">
+                        <img src="./assets/img/shenghuo.jpg" alt="">
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="layui-nav-item layui-layout-right loginIn"><a href="javascript:;">登录/注册</a></div>
+
+
     </div>
+
 </div>
 <!--========================================================
                         SLIDER
