--- a/consult-front/src/main/resources/static/index.html
+++ b/consult-front/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
 <!--========================================================
                         HEADER
 =========================================================-->
-<div class="fixed-top" style="background: rgba(255,255,255,1);">
+<div class="fixed-top" style="background: rgba(255,255,255,1)">
     <div class="container">
         <div class="row">
             <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
@@ -39,15 +39,12 @@
             <div class="col-xs-12 col-sm-11 col-md-11 col-lg-11">
                 <nav>
                     <ul>
-                        <li><a href="/gateway-index.html" style="margin-right: 30px;">求职咨询</a></li>
-                        <li><a href="/gateway-index.html" style="margin-right: 30px;">考研咨询</a>
+                        <li><a href="/gateway-index.html" style="margin-left: 30px;">求职咨询</a></li>
+                        <li><a href="/gateway-index.html" style="margin-left: 30px;">考研咨询</a>
 
                     </ul>
                 </nav>
-                <div class="mobile-menu">
-                    <i class="ti-menu"></i>
-                    <i class="ti-close"></i>
-                </div>
+
             </div>
 
         </div>
