--- a/consult-front/src/main/resources/static/home.html
+++ b/consult-front/src/main/resources/static/home.html
@@ -19,9 +19,11 @@
                     <a href="/home/" class="logo"><img src="/assets/img/2067272.png"></img></a>
                     <div class="search-wrapper bottom"></div>
                     <nav class="header_nav-list">
-                        <div class="header_nav-item add-hover-line"></div>
-                        <div class="header_nav-item add-hover-line"></div>
-                        <div class="header_nav-item add-hover-line"></div>
+                        <div class="header_nav-item add-hover-line">
+                            <span>成为行家</span>
+                        </div>
+                        <div class="header_nav-item qr add-hover-line">关注公众号</div>
+                        <div class="header_nav-item user-info add-hover-line">登录/注册</div>
 
                     </nav>
                 </div>
