--- a/consult-front/src/main/resources/static/home.html
+++ b/consult-front/src/main/resources/static/home.html
@@ -5,7 +5,10 @@
     <title>职帮帮-问题直达公司内部人员</title>
     <link rel="stylesheet" href="./assets/css/mycss.css">
 
-</head>
+    <script src="/assets/js/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+
+
 
 <body>
 <!--========================================================
@@ -40,4 +43,9 @@
 </section>
 
 </body>
+
+
+<script>
+
+</script>
 </html>
