--- a/consult-front/src/main/resources/static/home.html
+++ b/consult-front/src/main/resources/static/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>职帮帮-问题直达公司内部人员</title>
     <link rel="stylesheet" href="./assets/css/mycss.css">
+    <link rel="stylesheet" href="./assets/css/element.css">
 
     <script src="/assets/js/jquery-3.3.1.min.js"></script>
 
@@ -46,10 +47,27 @@
 
             </div>
             <div class="index-header">
-                <div class="slogan"></div>
-                <div class="search-wrapper"></div>
-            </div>
+                <div class="slogan">约高手<span class="red">一对一聊天</span> <br>
+                邂逅你的专属机遇
+                </div>
+                <div class="search-wrapper">
+                    <div aria-haspopup="listbox" role="combobox" aria-owns="el-autocomplete-4564" class="el-autocomplete">
+                        <div class="el-input el-input__suffix">
+                            <input type="text" autocomplete="off" valuekey="value" role="textbox" class="el-input__inner">
+                            <span class="el-input__suffix">
+                                <span class="el-input__suffix-inner">
+                                    <i class="icon-line"></i>
+                                    <i class="icon-search"></i>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="placeholder">
+                        <span class="label">你想聊的话题:</span>
+                    </div>
 
+                </div>
+            </div>
 
         </header>
 
@@ -67,7 +85,7 @@
     //鼠标移入显示
     $(".qr").mouseenter(function () {
         //$("#content").show();
-        debugger
+
         $("#qrcode-group").css("display", "flex");
     })
 
